--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yatas",
+  "name": "Frontend Mentor Project",
   "version": "1.0.0",
-  "description": "Yet Another Tailwind Apline Starter",
+  "description": "Frontend mentor project setup",
   "scripts": {
     "clean": "del _site",
     "watch-css": "npx tailwindcss -i ./assets/css/styles.css -o ./_site/css/styles.css -w",
@@ -17,7 +17,7 @@
     "TailwindCSS",
     "Alpine.js"
   ],
-  "author": "Yann Haefliger<hello@needbrainz.com>",
+  "author": "Coded for Free<info@codedforfree.com>",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
